<resources>
    <string name="app_name">Nsd Emulator</string>
    <string name="enter_service_name">Enter Service name</string>
    <string name="start_service">Start Service</string>
    <string name="starting_service">Starting Service…</string>
    <string name="x_service_started">%1$s Service started</string>
    <string name="stop_service">Stop service</string>
    <string name="connection_terminated_message">******Connection terminated from Client %1$d ******</string>
    <string name="client_message">Client %1$d : %2$s</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message…</string>
    <string name="disconnect">Disconnect</string>
    <string name="select_client">Select client…</string>
    <string name="console">Console</string>
    <string name="clear_selection">Clear selection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>