<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="controller"
            type="com.alohatechnology.nsdemulator.ui.server.ServerController" />

        <variable
            name="viewModel"
            type="com.alohatechnology.nsdemulator.ui.server.ServerViewModel" />

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="#fff"
        tools:context=".ui.server.ServerActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_stop_service"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="@{!viewModel.isProgressVisible()}"
            android:onClick="@{(v)->controller.onToggleClick()}"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@{viewModel.isStarted ? @string/stop_service : @string/start_service }"
            app:backgroundTintList="@{viewModel.isStarted ? @color/secondary_button_tint : @color/primary_button_tint }"
            app:layout_constraintBottom_toTopOf="@+id/clients_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/connecting_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:elevation="10dp"
            android:visibility="@{viewModel.isProgressVisible() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/start_stop_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/start_stop_service" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/clients_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:enabled="@{viewModel.isStarted()}"
            android:hint="@string/select_client"
            app:layout_constraintBottom_toTopOf="@+id/message_layout"
            app:layout_constraintEnd_toStartOf="@+id/clear_selection"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                android:id="@+id/clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:text="@={viewModel.selectionText}"
                app:dataSet="@{viewModel.clients}"
                app:selection="@={viewModel.selection}"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/message_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="@{viewModel.selection != -1}"
            app:endIconClick="@{(v)->controller.onMessageTemplateIconClick()}"
            app:endIconDrawable="@drawable/ic_baseline_collections_bookmark_24"
            app:endIconMode="custom"
            app:layout_constraintBottom_toTopOf="@+id/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="@{viewModel.selection != -1}"
                android:hint="@string/enter_message"
                android:importantForAutofill="no"
                android:inputType="textLongMessage"
                android:text="@={viewModel.message}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/disconnect"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="@{viewModel.selection != -1}"
            android:onClick="@{(v)->controller.onDisconnectClick()}"
            android:text="@string/disconnect"
            app:backgroundTint="@color/secondary_button_tint"
            app:icon="@drawable/ic_baseline_block_24"
            app:iconGravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:enabled="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="@{viewModel.isSendEnabled}"
            android:onClick="@{(v)->controller.onSendClick()}"
            android:text="@string/send"
            app:icon="@drawable/ic_baseline_send_24"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/start_stop_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/console_border_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/console_header_background"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/console"
                    android:textColor="#292929"
                    android:textSize="16sp" />

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/console_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@={viewModel.consoleText}"
                        android:textColor="#222222"
                        android:textSize="14sp"
                        app:autoBottomScrollView="@{scrollView2}"
                        app:fontFamily="@font/source_code_pro_regular"
                        tools:text="This is some example text which will be shown in the log text view" />
                </ScrollView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/clear_selection"
            android:layout_width="36dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/clear_selection"
            android:enabled="@{viewModel.selection != -1}"
            android:onClick="@{(v)->controller.onClearSelectionClick()}"
            android:paddingStart="4dp"
            android:paddingTop="12dp"
            android:paddingEnd="4dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/clients_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clients_layout"
            app:srcCompat="@drawable/ic_baseline_clear_24"
            app:tint="@color/secondary_button_tint" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/clients_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isStarted() ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="clear_selection, clients_layout" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/client_connect_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.selectionText.isEmpty() ? View.GONE : View.VISIBLE}"
            app:constraint_referenced_ids="message_layout,disconnect,send" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>